name:                httpmock
version:             0.0.0.1
synopsis:            In-process HTTP server for testing HTTP client libraries
description:         
  This package provides a tool to stub out an HTTP server in-process for
  testing HTTP client libraries. HTTPMock can send fake responses back to the
  client and record all requests made to it. It also offers some helpful tools
  for writing succinct assertions using Hspec.
homepage:            https://github.com/MichaelXavier/HTTPMock
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           Copyright (c) Michael Xavier 2013
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  extra-source-files:  README.md,
                       Makefile
                       Setup.hs
  exposed-modules:     Network.HTTPMock
                       Network.HTTPMock.Expectations
                       Network.HTTPMock.Types

  other-modules:       Network.HTTPMock.Interactions
                       Network.HTTPMock.Matchers
                       Network.HTTPMock.Utils
                       Network.HTTPMock.WebServers.Common
                       Network.HTTPMock.WebServers.Scotty
  build-depends:       base           == 4.6.*,
                       data-default,
                       http-types,
                       hspec == 1.*,
                       network,
                       classy-prelude == 0.*,
                       lens           == 3.*,
                       non-empty,
                       scotty         == 0.*,
                       text,
                       wai,
                       warp

test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test,src
  build-depends:       base               == 4.6.*,
                       data-default,
                       http-types,
                       http-streams       == 0.*,
                       hspec              == 1.*,
                       hspec-expectations == 0.*,
                       network,
                       non-empty,
                       scotty             == 0.*,
                       classy-prelude     == 0.*,
                       lens               == 3.*,
                       scotty             == 0.*,
                       text,
                       transformers,
                       wai,
                       warp
